--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "git-commit-msg-linter": "^5.0.8",
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2"
@@ -21,6 +23,6 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.15.6"
+    "pg": "^8.16.0"
   }
 }
