--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,10 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {
-    "prettier/prettier": "error"
-  }
+  "rules": {}
 }
