--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-POSTGRES_PASSWORD=andrew
+POSTGRES_PASSWORD=andrew  
 POSTGRES_USER=root
-POSTGRES_PORT=5432  
+POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 POSTGRES_DB=financeapp
+
+PORT=8080
