--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "lint-staged": "^15.5.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "uuid": "^12.0.0"
   }
 }
