--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "finance-app-api",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npx husky install"
+    "postinstall": "npx husky install",
+    "migrations": "node src/db/postgres/exec.js",
+    "start:dev": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
-    "git-commit-msg-linter": "^5.0.8",
-    "globals": "^16.2.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.5.2"
+    "eslint": "^8.46.0",
+    "git-commit-msg-linter": "^5.0.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "pg": "^8.16.3",
-    "uuid": "^12.0.0"
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.2",
+    "uuid": "^9.0.0",
+    "validator": "^13.15.15"
   }
 }
