--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
-  "name": "finance-app-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npx husky install",
-    "migrations": "node src/db/postgres/exec.js",
-    "start:dev": "node --watch index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.46.0",
-    "git-commit-msg-linter": "^5.0.4",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "pg": "^8.11.2",
-    "uuid": "^9.0.0",
-    "validator": "^13.15.15"
-  }
+    "name": "finance-app-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests  --runInBand --detectOpenHandles --forceExit",
+        "test:watch": "npm run test -- --watch",
+        "test:coverage": "npm run test -- --coverage",
+        "postinstall": "husky && prisma generate",
+        "start:dev": "node --watch index.js",
+        "start": "node index.js",
+        "eslint:check": "eslint src",
+        "prettier:check": "prettier --check src"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@faker-js/faker": "^8.4.1",
+        "@types/jest": "^29.5.12",
+        "eslint": "^9.1.0",
+        "git-commit-msg-linter": "^5.0.7",
+        "husky": "^9.0.11",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
+        "prisma": "^5.12.1",
+        "supertest": "^6.3.4"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.12.1",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dayjs": "^1.11.10",
+        "dotenv": "^16.4.5",
+        "dotenv-cli": "^7.4.1",
+        "express": "^4.19.2",
+        "globals": "^15.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "swagger-ui-express": "^5.0.0",
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0",
+        "zod": "^3.23"
+    }
 }
